--- a/index.html
+++ b/index.html
@@ -63,21 +63,22 @@
                         var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
                         var yyyy = today.getFullYear();
 
-                        var submitTime = '00:03 Sáng';
+                        var submitTime = '02:33 Chiều';
                         var submitDay = 18;
                         var submitMonth = 3;
                         var submitYear = 2020;
+                        var date = submitDay + '/' + submitMonth + '/' + submitYear;
 
                         if (dd == submitDay && mm == submitMonth && yyyy == submitYear) {
                             document.write('Lần cuối cập nhật: Hôm nay (', submitTime, ')');
                         } else if (dd == (submitDay + 1) && mm == submitMonth && yyyy == submitYear) {
                             document.write('Lần cuối cập nhật: Hôm qua (', submitTime, ')');
                         } else
-                            document.write('Lần cuối cập nhật: 17/03/2020 (', submitTime, ')');
+                            document.write('Lần cuối cập nhật: ', date, ' (', submitTime, ')');
                     </script>
                 </p>
                 <a href="https://www.plexary.com/download/latest.apk" rel="nofollow" download>
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.9 Beta</span>
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.10 Beta</span>
                 </a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
