--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     <div id="particles-js">
         <div class="heading">
             <div class="tanimation kago">
-                <img src="./img/LogoW.png" alt="Plexary Logo" height="180" width="180">
+                <img src="./img/plexary.svg" alt="Plexary Logo" height="180" width="180">
             </div>
             <h1 class="tanimation keader">
                 <span class="site-title">Plexary, LLC</span>
