--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
                         var yyyy = today.getFullYear();
 
-                        var submitTime = '09:02 Tối';
+                        var submitTime = '09:21 Tối';
                         var submitDay = 24;
                         var submitMonth = 3;
                         var submitYear = 2020;
@@ -77,7 +77,7 @@
                             document.write('Lần cuối cập nhật: ', date, ' (', submitTime, ')');
                     </script>
                 </p>
-                <a href="https://www.plexary.com/download/Plexary 0.2.5 Beta.apk" rel="nofollow" download>
+                <a href="https://www.plexary.com/download/Plexary 0.2.5 Beta Hotfix.apk" rel="nofollow" download>
                     <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.2.5 Beta</span>
                 </a>
                 <a href="#" rel="nofollow">
