--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
                         var yyyy = today.getFullYear();
 
-                        var submitTime = '12:52 Trưa';
+                        var submitTime = '02:00 Chiều';
                         var submitDay = 28;
                         var submitMonth = 3;
                         var submitYear = 2020;
@@ -77,8 +77,8 @@
                             document.write('Lần cuối cập nhật: ', date, ' (', submitTime, ')');
                     </script>
                 </p>
-                <a href="https://www.plexary.com/download/Plexary 0.2.9 Beta.apk" rel="nofollow" download>
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.2.9 Beta</span>
+                <a href="https://www.plexary.com/download/Plexary 0.3.0 Beta.apk" rel="nofollow" download>
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.3.0 Beta</span>
                 </a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
