--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                             document.write('Lần cuối cập nhật: ', date, ' (', submitTime, ')');
                     </script>
                 </p>
-                <a href="https://www.plexary.com/download/Plexary 0.4.0 Beta.apk" rel="nofollow" download>
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.4.0 Beta</span>
+                <a href="https://www.plexary.com/download/Plexary0.4.0Hotfix.apk" rel="nofollow" download>
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.4.0 Beta Hotfix</span>
                 </a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
