--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
                         var yyyy = today.getFullYear();
 
-                        var submitTime = '3:25 Chiều';
-                        var submitDay = 18;
+                        var submitTime = '11:25 Trưa';
+                        var submitDay = 19;
                         var submitMonth = 4;
                         var submitYear = 2020;
                         var date = submitDay + '/' + submitMonth + '/' + submitYear;
@@ -77,8 +77,8 @@
                             document.write('Lần cuối cập nhật: ', date, ' (', submitTime, ')');
                     </script>
                 </p>
-                <a href="https://www.plexary.com/download/Plexary0.4.1.apk" rel="nofollow" download>
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.4.1 Beta</span>
+                <a href="https://www.plexary.com/download/Plexary0.4.2.apk" rel="nofollow" download>
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.4.2 Beta</span>
                 </a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
