--- a/index.html
+++ b/index.html
@@ -56,32 +56,11 @@
             <span class="site-description tanimation keader">Chúng tôi sẽ trở lại sớm thôi.</span>
 
             <div class="download">
-                <!-- <p>
-                    <script>
-                        var today = new Date();
-                        var dd = String(today.getDate()).padStart(2, '0');
-                        var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
-                        var yyyy = today.getFullYear();
-
-                        var submitTime = '3:45 Chiều';
-                        var submitDay = 24;
-                        var submitMonth = 4;
-                        var submitYear = 2020;
-                        var date = submitDay + '/' + submitMonth + '/' + submitYear;
-
-                        if (dd == submitDay && mm == submitMonth && yyyy == submitYear) {
-                            document.write('Lần cuối cập nhật: Hôm nay (', submitTime, ')');
-                        } else if (dd == (submitDay + 1) && mm == submitMonth && yyyy == submitYear) {
-                            document.write('Lần cuối cập nhật: Hôm qua (', submitTime, ')');
-                        } else
-                            document.write('Lần cuối cập nhật: ', date, ' (', submitTime, ')');
-                    </script>
-                </p> -->
                 <a href="#" rel="nofollow">
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span>
+                    <em class="fa fa-androemd"></em>&nbsp;&nbsp;<span>Chưa ra mắt</span>
                 </a>
                 <a href="#" rel="nofollow">
-                    <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
+                    <em class="fa fa-apple"></em>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
             </div>
         </div>
     </div>
